zapata-agentforce/force-app/main/default/objects/Product2/fields/Anio_Modelo__c.field-meta.xml
<CustomField>
    <fullName>Anio_Modelo__c</fullName>
    <description>Anio del modelo. Un manual puede diferir entre anios.</description>
    <label>Anio del modelo</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>