zapata-agentforce/force-app/main/default/objects/Product2/fields/Manual_Completo__c.field-meta.xml
<CustomField>
    <fullName>Manual_Completo__c</fullName>
    <description>Verdadero solo cuando existe al menos un articulo publicado por cada sistema documentado. Permite saber de un vistazo que modelos ya tienen manual y cuales no.</description>
    <label>Manual completo</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>