zapata-agentforce/force-app/main/default/objects/Product2/fields/Marca__c.field-meta.xml
<CustomField>
    <fullName>Marca__c</fullName>
    <description>Zapata opera varias marcas. El formulario de citas pide marca ANTES que modelo, asi que el agente tambien debe distinguirlas.</description>
    <label>Marca</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
                <value>
                    <fullName>Freightliner</fullName>
                    <default>true</default>
                    <label>Freightliner</label>
                </value>
                <value>
                    <fullName>Mercedes-Benz Autobuses</fullName>
                </value>
                <value>
                    <fullName>Mercedes-Benz Vanes</fullName>
                </value>
                <value>
                    <fullName>Great Dane</fullName>
                </value>
                <value>
                    <fullName>Ford</fullName>
                </value>
                <value>
                    <fullName>Nissan</fullName>
                </value>
                <value>
                    <fullName>Mazda</fullName>
                </value>
                <value>
                    <fullName>JAC</fullName>
                </value>
                <value>
                    <fullName>Lincoln</fullName>
                </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>