zapata-agentforce/force-app/main/default/objects/Product2/fields/Sistemas_Documentados__c.field-meta.xml
<CustomField>
    <fullName>Sistemas_Documentados__c</fullName>
    <description>Lista de sistemas con manual publicado para este modelo. Se mantiene desde el proceso editorial, no a mano.</description>
    <label>Sistemas documentados</label>
    <length>255</length>
    <type>Text</type>
</CustomField>