zapata-agentforce/force-app/main/default/objects/Product2/fields/Tipo_Unidad__c.field-meta.xml
<CustomField>
    <fullName>Tipo_Unidad__c</fullName>
    <description>Clasificacion del modelo. Ordena el catalogo de manuales.</description>
    <label>Tipo de unidad</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
                <value>
                    <fullName>Tractocamion</fullName>
                </value>
                <value>
                    <fullName>Torton</fullName>
                </value>
                <value>
                    <fullName>Rabon</fullName>
                </value>
                <value>
                    <fullName>Ligero</fullName>
                </value>
                <value>
                    <fullName>Autobus</fullName>
                </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>